@@ -1,20 +1,41 @@
 # Static Transport Views
 
 - [How It Works](#how-it-works)
+- [Requirements](#requirements)
+- [Installation](#installation)
 - [Credits](#credits)
 - [Community](#community)
-
 
 
 # How it Works
 
 Static Transport Views is a simple mod that keeps your selected transport lines hidden or shown permenantly. 
-Currently, when closing the transport window via the X in the top right, it will reset all transport views to shown again as well as your selected objects. This makes navigating transport difficult. 
+Currently, when closing the transport overview window via the X in the top right, it will reset all transport views to shown again. This makes navigating transport difficult. 
+This mod keeps the transport reset from occuring, which means all lines will now keep their hidden or visible status permenantly.
 
-Static Transport Views makes all selection static, not allowing them to change.
 This means no matter how you close your transport window, all your selections stay the same. 
 Adding new transport lines will make them visible by default, but once you mark it as hidden, it will stay hidden.
-It will also keep all of your selected transportation objects (stops, stations, etc.) checked or unchecked until you check it again.
+
+# Requirements
+
+- [BepInEx v5](https://thunderstore.io/c/cities-skylines-ii/p/BepInEx/BepInExPack/) or v6 bleeding edge
+
+
+# Installation
+
+## Thunderstore
+If you would like to use this mod via Thunderstore, you can download the mod or include it in your packs from [Static Transport Views](https://thunderstore.io/c/cities-skylines-ii/).
+
+##  Manual
+1. Install BepInEx v5.4.21 or BepInEx 6
+
+2. Download the mod from the [release page](https://github.com/wheezydastarfish/staticTransportViews/releases). 
+
+3. Unzip it into the `Cities Skylines II/BepInEx/plugins` folder.
+
+4. Launch the Cities Skylines 2. Your mod should be loaded, and no more Transport Overview lines resets
+
+
 
 # Credits
 
