@@ -1,3 +1,5 @@
 # 0.1.0
 
 Initial Release
+- Added Harmony Patch to ResetLinesVisibility. 
+	- Overrides function to not run, meaning no Transport Lines will be reset
